--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf dist",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "node lib/index.js",
+    "start": "NODE_ENV=production node lib/index.js",
     "dev": "./node_modules/.bin/nodemon lib/index",
     "lint": "eslint src",
     "lintlib": "eslint lib",
@@ -70,7 +70,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.3",
-    "dockerode": "^2.5.0",
     "eslint-config-iteam": "^0.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-promise": "^2.0.0",
