--- a/node-agent/package.json
+++ b/node-agent/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "appmetrics": "^3.0.2",
+    "dockerode": "^2.5.0",
     "eslint-config-iteam": "^0.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.13.3",
+    "nconf-camel-cased": "^1.0.5",
     "node-fetch": "^1.3.3",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3"
