--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "json-loader": "^0.5.4",
     "lodash-deep": "^2.0.0",
     "marked": "^0.3.5",
+    "material-ui": "^1.0.0-alpha.21",
     "md5": "^2.0.0",
     "moment": "^2.12.0",
     "nconf-camel-cased": "^1.0.5",
@@ -98,6 +99,7 @@
     "react-router": "^3.0.0",
     "react-router-scroll": "^0.4.1",
     "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^1.0.0-alpha.1",
     "redux": "^3.6.0",
     "redux-actions": "^1.1.0",
     "redux-thunk": "^2.1.0",
